[FIX][UI] Re-fix colors and spacing of "Permissions" and "Remove" dropdown items in page bar. First updates to style jQuery-UI elements with theme values. FiveAlive theme color updates.

--- a/themes/base_files/scss/_tiki-miscellaneous_global.scss
+++ b/themes/base_files/scss/_tiki-miscellaneous_global.scss
@@ -447,3 +447,7 @@ div.categbar {
 .sitelogo .btn {display: none}
 .sitelogo:hover .btn {display: block}
 
+// Special links in "More" button of page-bar
+.dropdown-menu > .btn-link {
+	padding: 0.25rem 1.5rem;
+}
